# AvtoTest_02

./: .dockerignore  .env  .env.example  .env.local.example  .env.prod.example  .gitignore  CLEANUP_CHECKLIST.md  DEMO_DATA.md  DOCKER_GUIDE.md  Dockerfile  Dockerfile.frontend  Dockerfile.local  Dockerfile.prod  FULL_STACK_SETUP.md  LICENSE  Makefile  PROJECT_CONTEXT.md  PROJECT_STATUS.md  QUICK_START.md  README.md  RISK_POINTS.md  create_db.py  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  main.py  pytest.ini  requirements.txt  run_local.ps1  setup_local.ps1
backend/: alembic.ini  gunicorn_conf.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/analytics/: pass_probability.py
backend/api/: __init__.py  promocode_schemas.py
backend/core/: config.py  email.py  errors.py  logging.py  question_bank.py  rbac.py  security.py
backend/database/: __init__.py  analytics_events.sql  backup.py  payments_subscriptions.sql  session.py
backend/middleware/: error_handler.py  rate_limit.py
backend/models/: analytics_event.py  coin_transaction.py  driving_instructor.py  driving_instructor_complaint.py  driving_instructor_registration_setting.py  driving_instructor_review.py  driving_school_lead.py  driving_school_review.py  exam_simulation_attempt.py  experiment.py  feedback.py  guest_attempt.py  inference_snapshot.py  permission.py  question_category.py  refresh_session.py  review_queue.py  role.py  role_permission.py  user.py  user_adaptive_profile.py  user_exam_result.py  user_experiment.py  user_prediction_snapshot.py  (+5 more)
(+1086 files in other folders)
