[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autotest-backend"
version = "0.1.0"
description = "AutoTest backend (FastAPI)"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api*",
    "core*",
    "database*",
    "middleware*",
    "models*",
    "modules*",
    "services*",
    "analytics*",
]
exclude = ["tests*", "alembic*", "scripts*", "__pycache__*"]